Using the 'mailer' service.

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
 		"icanboogie/module-installer": "*",
 		"icybee/module-nodes": "2.x"
 	},
+	"suggest": {
+		"icanboogie/mailer": "A library designed to handle emails generation and sending.",
+	},
 	"autoload": {
 		"classmap": [ "lib" ]
 	}
