--- a/composer.json
+++ b/composer.json
@@ -18,12 +18,12 @@
 	},
 	"minimum-stability": "dev",
 	"require": {
-		"php": ">=5.3.0",
+		"php": ">=5.4.0",
 		"icanboogie/module-installer": "*",
 		"icybee/module-nodes": "2.x"
 	},
 	"suggest": {
-		"icanboogie/mailer": "A library designed to handle emails generation and sending.",
+		"icanboogie/mailer": "A library designed to handle emails generation and sending."
 	},
 	"autoload": {
 		"classmap": [ "lib" ]
