--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
 	"minimum-stability": "dev",
 	"require": {
 		"php": ">=5.5.0",
-		"icanboogie/module-installer": "*",
-		"icybee/module-nodes": "^2.1.0"
+		"icanboogie/module-installer": "^1.2.3",
+		"icybee/module-nodes": "^3.0.0"
 	},
 	"suggest": {
 		"icanboogie/mailer": "A library designed to handle emails generation and sending."
