--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,24 @@
+sudo: false
+
 language: php
 
 php:
-  - 5.4
   - 5.5
   - 5.6
+  - 7.0
+  - hhvm
 
 matrix:
   allow_failures:
-    - php: 5.6
+    - php: hhvm
 
 before_script:
-  - COMPOSER_ROOT_VERSION=dev-master composer --prefer-source --dev install
+  - travis_retry composer self-update
+  - composer require satooshi/php-coveralls --prefer-source
 
+script:
+  - mkdir -p build/logs
+  - phpunit --coverage-clover build/logs/clover.xml
+
+after_script:
+  - php vendor/bin/coveralls -v
