--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
 	"prefer-stable": true,
 	"prefer-dist": true,
 	"require": {
-		"php": "^5.6 || ^7.0",
+		"php": ">=5.6",
 		"icanboogie/module-installer": "^4.0",
 		"icybee/module-nodes": "^4.0"
 	},
